# autolang

./: .env  .gitignore  Cargo.toml  README.md  THOUGHTS.md  error.al  fib.al  little.al  test.al  vm.al
.github/workflows/: codecov.yml
backend/: Cargo.toml
backend/migrations/: 0001_user_table.sql  20240801173515_user.up.sql  20240801173545_session.down.sql  20240801173545_session.up.sql
backend/src/: config.rs  main.rs
backend/src/auth/: middleware.rs  mod.rs
backend/src/db/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/schemas/: mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: error.rs  main.rs  views.rs
frontend/src/api/: register.rs  users.rs
frontend/src/api/user/: new_user.rs
frontend/src/components/: form_input.rs  mod.rs
frontend/src/views/: admin.rs  home.rs  login.rs  mod.rs  register.rs
lang/: Cargo.toml
lang/src/: compiler.rs  error.rs  execution.rs  input_stream.rs  lib.rs  module.rs  parser.rs  prelude.rs  spanned.rs  system_functions.rs  tokenizer.rs
lang/src/compiler/: compiler_context.rs  context.rs  scope.rs  unresolved_instruction.rs
lang/src/execution/: value.rs
lang/src/parser/: binary_expression.rs  expression.rs  function.rs  helpers.rs  spans.rs  structs.rs  type_def.rs
lang/src/system_functions/: print.rs
lang/tests/: full_parsing.al  parser.rs  tokenizer.rs
reset_iterator/: Cargo.toml
reset_iterator/src/: lib.rs
virtual_machine/: Cargo.toml
virtual_machine/src/: error.rs  instruction.rs  lib.rs  machine.rs  memory.rs  opcode.rs  program_builder.rs  register.rs
(+19 files in other folders)
