[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-subscriber = "0.3.18"
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
common = { path = "../common" }
hex = "0.4.3"
sha2 = "0.10.8"
getrandom = "0.2.15"
rust-argon2 = "2.1.0"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
