[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
common = { path = "../common" }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0.121"
web-sys = "0.3.69"
wasm-bindgen = "0.2.92"
gloo-console = "0.3.0"
serde-wasm-bindgen = "0.6.5"
